# stable-diffusion-webui-forge

./: .gitignore  pyproject.toml  setup.py
sd_forge/: __init__.py  launch.py  pyproject.toml
sd_forge/backend/: attention.py  memory_management.py  operations.py  operations_bnb.py  stream.py  utils.py
sd_forge/backend/diffusion_engine/: base.py
sd_forge/backend/misc/: sub_quadratic_attention.py
sd_forge/backend/modules/: k_model.py
sd_forge/backend/nn/: flux.py  t5.py  unet.py  vae.py
sd_forge/backend/patcher/: base.py  clip.py  clipvision.py  controlnet.py  lora.py  unet.py
sd_forge/k_diffusion/: external.py  sampling.py
sd_forge/modules/: cache.py  cmd_args.py  codeformer_model.py  dat_model.py  deepbooru.py  deepbooru_model.py  devices.py  errors.py  esrgan_model.py  extensions.py  extra_networks.py  extra_networks_hypernet.py  extras.py  face_restoration.py  face_restoration_utils.py  gfpgan_model.py  gradio_extensions.py  hashes.py  hat_model.py  images.py  img2img.py  infotext_utils.py  infotext_versions.py  initialize.py  initialize_util.py  interrogate.py  launch_utils.py  modelloader.py  options.py  paths.py  postprocessing.py  processing.py  profiling.py  progress.py  realesrgan_model.py  script_callbacks.py  script_loading.py  scripts.py  scripts_auto_postprocessing.py  scripts_postprocessing.py  (+47 more)
sd_forge/modules/processing_scripts/: seed.py  (+3 more)
sd_forge/modules_forge/: alter_samplers.py  bnb_installer.py  diffusers_patcher.py  forge_space.py  initialization.py  main_entry.py  shared.py  supported_controlnet.py  supported_preprocessor.py  utils.py
(+54 files in other folders)
