# ─────────────────────────────────────────────────────────────
# pyproject.toml  —  build & metadata for “sd_forge”
# requires:  pip ≥ 22   (PEP 517 front-end)
# build:    python -m build   → dist/…whl  +  dist/…tar.gz
# install:  pip install .     (isolated build)   /   pip install -e .  (editable)
# ─────────────────────────────────────────────────────────────

[build-system]
requires      = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name            = "sd_forge"
version         = "0.0.1"
description     = "Stable-Diffusion WebUI Forge packaged as a reusable Python dependency"
readme          = "README.md"
requires-python = ">=3.10"
authors         = [{ name = "Automatic1111 & Forge authors" }]
keywords        = ["stable-diffusion", "webui", "forge"]

# runtime dependencies (add as needed)
dependencies = [
    # "torch>=2.0",           # uncomment if you want pip to pull torch
    # "diffusers>=0.27",
]

# include non-Python files honoured by MANIFEST.in
[tool.setuptools]
include-package-data = true

# automatically find every sd_forge* package under the project root
[tool.setuptools.packages.find]
where = ["."]
include = ["sd_forge*"]
exclude = ["tests*"]

